--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+ }
+ 
+ html{
+  font-family: sans-serif;
+  font-size: 10px;
+ }
+
+ body{
+   background-color: rgb(223, 223, 223);
+ }
