--- a/src/app/components/tasks/tasks.component.html
+++ b/src/app/components/tasks/tasks.component.html
@@ -1,3 +1,3 @@
 <main class="main">
-  <app-task *ngFor="let task of tasks" [task]="task"></app-task>
+  <app-task *ngFor="let task of tasks" [task]="task" (onDeleteTask)="deleteTask(task)" (onToggleDoneTask)="toggleDoneTask(task)"></app-task>
 </main>
